--- a/manifest.json
+++ b/manifest.json
@@ -1,35 +1,40 @@
 {
+  "main.css": "auto/main.css",
   "main.js": "auto/scripts.js",
   "public/images/hero@2x.png": "auto/public/images/hero@2x.png",
   "public/images/hero.png": "auto/public/images/hero.png",
+  "public/images/career@2x.png": "auto/public/images/career@2x.png",
+  "public/images/cost@2x.png": "auto/public/images/cost@2x.png",
   "public/images/medical.png": "auto/public/images/medical.png",
+  "public/images/career.png": "auto/public/images/career.png",
   "public/images/transport.png": "auto/public/images/transport.png",
   "public/images/house.png": "auto/public/images/house.png",
+  "public/images/cost-section.png": "auto/public/images/cost-section.png",
   "public/images/bank.png": "auto/public/images/bank.png",
   "public/images/campus.png": "auto/public/images/campus.png",
-  "favicon/web-app-manifest-512x512.png": "auto/favicon/web-app-manifest-512x512.png",
   "public/images/career-2.jpg": "auto/public/images/career-2.jpg",
   "public/images/decor-sub.png": "auto/public/images/decor-sub.png",
   "public/images/career-4.jpg": "auto/public/images/career-4.jpg",
   "public/images/career-3.jpg": "auto/public/images/career-3.jpg",
   "public/images/career-1.jpg": "auto/public/images/career-1.jpg",
-  "public/images/icons.svg": "auto/public/images/icons.svg",
+  "favicon/web-app-manifest-512x512.png": "auto/favicon/web-app-manifest-512x512.png",
   "media/work-sans-v19-latin-600.woff2": "auto/media/5bf6a324ca1e156d09a1.woff2",
   "media/work-sans-v19-latin-700.woff2": "auto/media/9c9ded27fc04ca7baed4.woff2",
   "media/work-sans-v19-latin-500.woff2": "auto/media/07d3846622a5d863a9e0.woff2",
-  "favicon/web-app-manifest-192x192.png": "auto/favicon/web-app-manifest-192x192.png",
   "media/work-sans-v19-latin-regular.woff2": "auto/media/0c3316f5a8c3abb3f9ff.woff2",
-  "favicon/apple-touch-icon.png": "auto/favicon/apple-touch-icon.png",
+  "public/images/icons.svg": "auto/public/images/icons.svg",
   "index.html": "auto/index.html",
-  "favicon/favicon.svg": "auto/favicon/favicon.svg",
   "favicon/favicon.ico": "auto/favicon/favicon.ico",
   "public/images/logo.png": "auto/public/images/logo.png",
+  "favicon/web-app-manifest-192x192.png": "auto/favicon/web-app-manifest-192x192.png",
   "media/poppins-v23-latin-600.woff2": "auto/media/91145014c0350c248ed2.woff2",
   "media/poppins-v23-latin-regular.woff2": "auto/media/405055dd680fa1dcdfa2.woff2",
   "media/poppins-v23-latin-500.woff2": "auto/media/08491d3f7fe7ae88ef44.woff2",
-  "favicon/favicon-96x96.png": "auto/favicon/favicon-96x96.png",
+  "favicon/apple-touch-icon.png": "auto/favicon/apple-touch-icon.png",
   "public/images/education-decor.png": "auto/public/images/education-decor.png",
+  "favicon/favicon.svg": "auto/favicon/favicon.svg",
   "public/images/apl-top-decor.png": "auto/public/images/apl-top-decor.png",
+  "favicon/favicon-96x96.png": "auto/favicon/favicon-96x96.png",
   "privacy-policy.html": "auto/privacy-policy.html",
   "cookies.html": "auto/cookies.html",
   "terms.html": "auto/terms.html",
@@ -37,6 +42,6 @@
   "sitemap.xml": "auto/sitemap.xml",
   "favicon/site.webmanifest": "auto/favicon/site.webmanifest",
   "robots.txt": "auto/robots.txt",
-  "scripts.js.map": "auto/scripts.js.map",
-  "main.hot-update.js.map": "auto/main.2a8c47b5c8b37f0f016d.hot-update.js.map"
+  "main.css.map": "auto/main.css.map",
+  "scripts.js.map": "auto/scripts.js.map"
 }
